# Django

./: pyproject.toml
event/: urls.py  views.py
event/mysite/: settings.py
mysite/: settings.py
mysite/mysite/: settings.py
polls/: admin.py  index.html  models.py  tests.py  views.py
polls/migrations/: 0001_initial.py
polls/static/polls/: style.css
polls/templates/polls/: index.html
