[tool.poetry]
name = "django-tutorial"
version = "0.1.0"
description = ""
authors = ["honoka32 <kishida1832@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
mysqlclient = "^2.2.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
